# OkGen

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_PROCESS.md  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  list-active-users.bat  pyproject.toml  run.bat  run.cmd  run.sh
.claude/skills/checkpoint/: SKILL.md
.claude/skills/close_shop/: SKILL.md
config/: chains.yaml  display.yaml  field_colors.yaml  keys.yaml  limits.yaml  nicelabel.yaml  regions.yaml  rename_presets.yaml  rename_tokens.yaml  section_counts.yaml
data/OkFileDefinitions/: CartonLabel.OK  DistLabels.OK  EUPreticket.OK  Preticket.OK  StyleHeader.OK  TJXEWMS_PreticketLayout.xlsx  TJXNA_CartonLabelLayout.xlsx  TJXNA_DistLabelsLayout.xlsx  TJXNA_PreticketLayout.xlsx  TJXNA_StyleHeaderLayout.xlsx
docs/: OkGen-Demo.pptx  SESSION_TRANSCRIPT.md
docs/session/: session.jsonl
layouts/: CartonLabel.json  DistLabels.json  EUPreticket.json  Preticket.json  StyleHeader.json
src/okgen/: __init__.py  cli.py  config.py  detect.py  okfile.py
src/okgen/api/: __init__.py  app.py  service.py
src/okgen/layout/: __init__.py  compiler.py  models.py  registry.py  validate.py
src/okgen/web/: __init__.py  app.py
src/okgen/web/static/: app.js  styles.css
src/okgen/web/templates/: index.html
tests/: test_api.py  test_config.py  test_detect.py  test_layout_compile.py  test_okfile.py
tests/fixtures/config/: chains.yaml  display.yaml  field_colors.yaml  keys.yaml  limits.yaml  regions.yaml  rename_presets.yaml  rename_tokens.yaml  section_counts.yaml
