[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "okgen"
version = "0.1.0"
description = "Visualizer/editor for fixed-width OK files driven by xlsx layout definitions"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
okgen = "okgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
