[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "okgen"
version = "0.1.0"
description = "Visualizer/editor for fixed-width OK files driven by xlsx layout definitions"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
okgen = "okgen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
